--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,3 +1,10 @@
 .friendList {
     list-style: none;
+    display: flex;
+    column-gap: 20px;
+    
+}
+
+.friendList li {
+    flex-basis: 20%;
 }
