--- a/src/components/Stats/Stats.module.css
+++ b/src/components/Stats/Stats.module.css
@@ -23,7 +23,7 @@
 .quantity {
   display: block;
   text-align: center;
-  color: #3c4756;
+  color: black;
   font-weight: 700;
   font-size: 48px;
 }
